@@ -86,8 +86,8 @@ public class NewStuffHelper {
         Matcher pageMatcher = Pattern.compile(pageRegex).matcher(buttonID);
         if (pageMatcher.find()) {
             int page = Integer.parseInt(pageMatcher.group("page"));
-            List<Button> buttons = NewStuffHelper.buttonPagination(allButtons, buttonPrefix, 24, page, true);
-            NewStuffHelper.sendOrEditButtons(event, event.getMessageChannel(), message, buttons);
+            List<Button> buttons = buttonPagination(allButtons, buttonPrefix, 24, page, true);
+            sendOrEditButtons(event, event.getMessageChannel(), message, buttons);
             return true;
         }
         return false;
@@ -95,13 +95,12 @@ public class NewStuffHelper {
 
     public static void sendOrEditButtons(
             GenericInteractionCreateEvent event, MessageChannel channel, String message, List<Button> buttons) {
-        if (event != null
-                && event instanceof ButtonInteractionEvent bEvent
+        if (event instanceof ButtonInteractionEvent bEvent
                 && bEvent.getMessage().getContentRaw().equals(message)) {
             // replace the buttons in the previous message
             List<List<ActionRow>> actionRows = MessageHelper.getPartitionedButtonLists(buttons);
-            if (actionRows.size() >= 1) {
-                bEvent.getHook().editOriginalComponents(actionRows.get(0)).queue();
+            if (!actionRows.isEmpty()) {
+                bEvent.getHook().editOriginalComponents(actionRows.getFirst()).queue();
             }
         } else {
             // make a new message
@@ -134,7 +133,6 @@ public class NewStuffHelper {
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
             ActionCardHelper.sendActionCardInfo(game, player, event);
             ButtonHelper.deleteMessage(event);
-            return;
         }
     }
 
@@ -146,9 +144,9 @@ public class NewStuffHelper {
         // Right now, only a 'null' status allows the card to be picked up. Add more to this list if it changes in the
         // future
         List<ACStatus> allowedStatus = new ArrayList<>(Collections.singleton(null));
-        game.getDiscardActionCards().entrySet().stream()
-                .filter(e -> allowedStatus.contains(status.getOrDefault(e.getKey(), null)))
-                .map(e -> Map.entry(e.getKey(), Mapper.getActionCard(e.getKey()).getName()))
+        game.getDiscardActionCards().keySet().stream()
+                .filter(integer -> allowedStatus.contains(status.getOrDefault(integer, null)))
+                .map(integer -> Map.entry(integer, Mapper.getActionCard(integer).getName()))
                 .map(e -> Buttons.green(pre + e.getKey(), e.getValue(), CardEmojis.ActionCard))
                 .forEach(allButtons::add);
         return allButtons;
